Fix li padding on IE

--- a/wp-content/themes/our-new-tenet/style.css
+++ b/wp-content/themes/our-new-tenet/style.css
@@ -1319,7 +1319,7 @@ ul.album-nav li {
 .facilities-wrap .facilities-container li li li {
   list-style-type: none;
   margin-left: 0px;
-  padding-left: 1em;
+  padding-left: 1.3em;
 }
  
 .toggle_container {
